# social-media-analysis

./: .gitignore  README.md  airflow.cfg  airflow.db  pyproject.toml  requirements.txt  scraper.py  tweet.py  unittests.cfg
.env/: pyvenv.cfg
airflow/: .gitignore
airflow/dags/: crawler.py  dbt_models.py  operators.py
airflow/logs/scheduler/: latest
backup/models/: sources.yaml
backup/models/stg/: ada_tweets.sql  btc_tweets.sql  crypto_tweets.sql  (+6 more)
conf/: kafka.yaml  main.yaml
conf/bigquery/: base.yaml
conf/consumer/: append.yaml
conf/entity/: crypto.yaml
conf/producer/: append.yaml  backfill.yaml
dags/: crawler.py  twitter.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: utils.sql
dbt/models/: sources.yaml
images/: social-media-analysis.drawio
infra/: Dockerfile  Dockerfile.backup  Dockerfile.superset  dc.yaml  docker-compose.cp-all-in-one.yaml  docker-compose.yaml  docker-entrypoint.sh
infra/k8s/: airflow-override.yaml  storage.yaml  values.yaml
notebooks/: test_ray.ipynb
social_media_analysis/notebooks/: test_dbt.ipynb
social_media_analysis/src/: .gitignore
src/: main.py  scraper.py  test.py  test_consumer.py  test_producer.py  tweet.py
src/base/: logger.py  model.py  tweet.py
src/core/: crawler.py  logger.py  queue.py  twittercrawler.py  writer.py
src/kafka/: consumer.py  docker-compose.yml  producer.py
src/model/: base.py  bqmodel.proto  bqmodel_pb2.py  core.py  crawler.py  queue.py  twitter.py
src/notebooks/: Untitled.ipynb  bqmodel.proto  bqmodel_pb2.py  kafka.yaml  test.ipynb  test_bq.ipynb  test_crawler.ipynb  test_dbt.ipynb  test_kafka.ipynb  test_snscrape.ipynb  test_spark.ipynb
src/services/: __init__.py
src/util/: helpers.py
src/utils/: helpers.py
tests/: tests.py
(+99 files in other folders)
